--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-tooltip": "^5.18.1",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
